--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1>В данной программе реализованы: работа с данными, вычисление определённых переменных, анализ данных и создание гистограммы."
+    "<h1>В данной программе реализованы: работа с данными, вычисление определённых переменных, анализ данных и создание гистограммы. Данный код является альтернативой некоторой части функционала IBM SPSS Statistics."
    ]
   },
   {
